--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a class="white" href="Team.html">Our Team</a></li>
                 </ul>    
         </div>      
-        <h1 class="title white">Welcome to Dunder Miffin</h1>
+        <h1 class="title">Welcome to Dunder Miffin (testing)</h1>
         <h2>Limitless Paper in a Paperless World</h2>
         <div class="qoute-homepage">
             <p class="paragraph">
